--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div class="box caja3" onmouseover="saludar2()">CAJA3</div>
   <script type="module" src="js/main.js"></script>
   <script>
+    // opcion de funcion con evento desde HTML
     function saludar2() {
       alert("Segundo saludo");
     }
